[package]
name = "sovereign-teleport"
version = "0.1.0"
edition = "2021"
authors = ["Dimitar Prodromov <dimitar@qantum.io>"]
description = "🛸 SOVEREIGN TELEPORT - Zero-downtime state migration infrastructure"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rmp-serde = "1.1"  # MessagePack

# Database drivers
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
mongodb = "2.8"

# State management
dashmap = "5.5"  # Concurrent HashMap
parking_lot = "0.12"

# Compression
lz4 = "1.24"
zstd = "0.13"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }
blake3 = "1.5"

# Networking
tonic = "0.10"  # gRPC
prost = "0.12"

# Utilities
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# FFI
napi = { version = "2.14", features = ["async"] }
napi-derive = "2.14"

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
napi-build = "2.1"
tonic-build = "0.10"

[features]
default = ["postgres", "redis", "mongodb"]
postgres = []
redis = []
mongodb = []
