[package]
name = "swarm_executor"
version = "1.0.0"
edition = "2021"
authors = ["Dimitar Prodromov <QAntum Empire>"]

[lib]
crate-type = ["cdylib"]
name = "swarm_executor"

[build-dependencies]
napi-build = "2.1.3"

[dependencies]
napi = { version = "2.16.1", default-features = false, features = ["napi4", "async", "serde-json"] }
napi-derive = "2.16.1"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
rayon = "1.8"
crossbeam = "0.8"
