[package]
name = "qantum-engine"
version = "36.1.0"
edition = "2021"
authors = ["Dimitar Prodromov <dp@qantum.site>"]
description = """
QAntum Prime v36.1 - Native Rust Engine (NAPI)
Sub-nanosecond arbitrage hot-path with SIMD batch processing.
Replaces V8 JIT for critical math - 50-100x faster than JS.
Compiles to .node addon via napi-rs for zero-overhead FFI.
"""

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi8"] }
napi-derive = "2"
rust_decimal = "1"
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.8"
sysinfo = "0.30"
chrono = "0.4"

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
